--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - opencv3
     - numpy
     - plio
+    - gdal
   run:
     - python
     - vlfeat
@@ -34,6 +35,7 @@ requirements:
     - opencv3
     - numpy
     - plio
+    - gdal
 
 test:
   imports:
