--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -26,6 +26,7 @@ requirements:
     - plio                                                                           
     - ncurses                                                                        
     - geopandas
+    - imageio
   run:
     - python=3
     - numpy                                                                          
@@ -40,6 +41,7 @@ requirements:
     - plio                                                                           
     - ncurses                                                                        
     - geopandas
+    - imageio
 test:
   imports:
     - autocnet
