--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,3 @@
-name: autocnet
 channels:
   - conda-forge
   - usgs-astrogeology
@@ -22,3 +21,10 @@ dependencies:
   - pytest-cov
   - coveralls
   - anaconda-client
+  - jupyter
+  - opencv
+  - pip:
+    - pillow
+    - pvl
+    - libpysal
+    - protobuf
