--- a/environment.yml
+++ b/environment.yml
@@ -25,7 +25,7 @@ dependencies:
   - plio >= 1.1.0
   - plurmy
   - psycopg2
-  - pyproj==1.2.1
+  - pyproj<=1.2.1
   - pytest
   - pytest-cov
   - pysis
