Travis deploy docs

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,10 +54,12 @@ install:
 
   # Install dependencies
   - conda env update -n test -f environment.yml
-  - export PROJ_LIB=$CONDA_PREFIX/share/proj  
+  - export PROJ_LIB=$CONDA_PREFIX/share/proj 
+  - pip install travis-sphinx 
 
 script:
   - autocnet_config=config/test_config.yml pytest -v autocnet
+  - travis-sphinx build --source=docs --nowarn # The sphinx build script
 
 after_success:
   - coveralls
@@ -66,6 +68,7 @@ after_success:
   - conda install conda-build anaconda-client
   - conda config --set anaconda_upload yes
   - conda build --token $CONDA_UPLOAD_TOKEN --python $PYTHON_VERSION -c conda-forge -c menpo -c usgs-astrogeology conda
+  - travis-sphinx deploy  # After the upload so fails on PRs because upload fails
 
 notifications:
   webhooks:
