--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ install:
   - conda env update -n test -f environment.yml
   - export PROJ_LIB=$CONDA_PREFIX/share/proj 
   - pip install travis-sphinx 
+  - conda install -c conda-forge nbsphinx
 
 script:
   - autocnet_config=config/test_config.yml pytest -v autocnet
