--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,7 @@ dependencies:
   - pip
   - pip:
     - redis
+    - pysis
   - plio >= 1.1.0
   - plurmy
   - psycopg2
@@ -30,6 +31,7 @@ dependencies:
   - pytest-cov
   - pysis
   - scikit-image
+  - scikit-learn
   - scipy<=1.2.1
   - shapely
   - sqlalchemy
