--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,8 @@ deploy:
   provider: script
   skip_cleanup: true
   script: bash deploy.sh
-  on:
-    branch: dev
+  # on:
+  #  branch: dev
 
 notifications:
   webhooks:
