--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ after_success:
 deploy:
   provider: script
   skip_cleanup: true
-  script: bash deploy.sh
+  script: travis_wait 60 bash deploy.sh
   on:
     branch: dev
 
