--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -27,6 +27,7 @@ requirements:
       - plio>=1.2.3
       - knoten>=0.2.1
       - csmapi>=1.0.1
+      - geoalchemy2
     host:
       - python>=3
       - pip
