--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -24,6 +24,7 @@ requirements:
       - plurmy>=0.1.1
       - pysis>=0.1.1
       - pyyaml=5.3.1
+      - redis-py
       - scikit-image=0.17.2
       - scipy=1.5.1
       - shapely=1.7.0
@@ -53,7 +54,9 @@ requirements:
       - pysis
       - pytest
       - pytest-cov
+      - python>=3
       - pyyaml
+      - redis-py
       - scikit-image
       - scikit-learn
       - scipy<=1.2.1
