--- a/environment.yml
+++ b/environment.yml
@@ -20,8 +20,6 @@ dependencies:
   - opencv <= 3.5
   - pillow
   - pip
-  - pip:
-    - redis
   - plio >= 1.1.0
   - plurmy
   - psycopg2
@@ -35,5 +33,6 @@ dependencies:
   - shapely
   - sqlalchemy
   - sqlalchemy-utils
+  - redis-py
   - usgs-astrogeology/label/dev::usgscsm
   - vlfeat
