--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - default
       - traefik-public
     volumes:
-      - pgadm:/var/lib/pgadmin
+      - /data/big/pgadmin:/var/lib/pgadmin
 
   pgbouncer:
     image: brainsam/pgbouncer
