--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - plio >= 1.1.0
   - plurmy
   - psycopg2
+  - proj >= 7.0.0
   - pyproj
   - pytest
   - pytest-cov
@@ -35,8 +36,8 @@ dependencies:
   - scikit-learn
   - scipy<=1.2.1
   - shapely
-  - sqlalchemy
-  - sqlalchemy-utils
+  - sqlalchemy < 1.4
+  - sqlalchemy-utils=0.36.7
   - redis-py
   - usgscsm
   - vlfeat
