--- a/environment.yml
+++ b/environment.yml
@@ -17,7 +17,7 @@ dependencies:
   - jupyter
   - knoten
   - ncurses
-  - networkx
+  - networkx >=2, <3
   - numpy
   - opencv <= 3.5
   - pillow
@@ -25,7 +25,7 @@ dependencies:
   - plio >= 1.1.0
   - plurmy
   - psycopg2
-  - proj >= 7.0.0
+  - proj >= 7.0.0, <8
   - pyproj
   - pytest
   - pytest-cov
@@ -36,8 +36,8 @@ dependencies:
   - scikit-learn
   - scipy<=1.2.1
   - shapely
-  - sqlalchemy < 1.4
-  - sqlalchemy-utils=0.36.7
+  - sqlalchemy >= 1.4,<1.5
+  - sqlalchemy-utils>=0.37.0
   - redis-py
   - usgscsm
   - vlfeat
