--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,7 +28,7 @@ requirements:
       - scikit-image=0.17.2
       - scipy=1.5.1
       - shapely=1.7.0
-      - sqlalchemy-utils=0.36.6
+      - sqlalchemy-utils>=0.37.0
     host:
       - python>=3
       - pip
@@ -47,8 +47,9 @@ requirements:
       - numpy
       - opencv<=3.5
       - pillow
-      - plio>=1.1.0
+      - plio>=1.3
       - plurmy
+      - proj >= 7.0.0, <8
       - psycopg2
       - pyproj
       - pysis
@@ -62,7 +63,7 @@ requirements:
       - scipy<=1.2.1
       - shapely
       - sqlalchemy
-      - sqlalchemy-utils
+      - sqlalchemy-utils>=0.37.0
       - usgscsm
       - vlfeat
 
