--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - menpo
 
 dependencies:
-  - python >= 3
+  - python>=3
   - coveralls
   - csmapi
   - cyvlfeat
@@ -15,17 +15,17 @@ dependencies:
   - imageio
   - ipykernel
   - jupyter
-  - knoten >= 0.2.0, < 1.0
+  - knoten>= 0.2.0,<1.0
   - ncurses
   - networkx >=2, <3
   - numpy
   - opencv <= 3.5
   - pillow
   - pip
-  - plio < 1.2.4
+  - plio>=1.3
   - plurmy
   - psycopg2
-  - proj >= 7.0.0, <8
+  - proj>=7.0.0,<8
   - pyproj
   - pytest
   - pytest-cov
@@ -35,7 +35,7 @@ dependencies:
   - scikit-learn
   - scipy<=1.2.1
   - shapely
-  - sqlalchemy >= 1.4,<1.5
+  - sqlalchemy>=1.4,<1.5
   - sqlalchemy-utils>=0.37.0
   - redis-py
   - usgscsm
